# taxfix

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pipeline.md  pyproject.toml
.github/workflows/: test.yml
src/: data_anonymization.py  database.py  fetch_data.py  generate_report.py
tests/: test_data_anonymization.py  test_database.py  test_fetch_data.py  test_generate_report.py
